# MFNetsSurrogates

./: .gitignore  LICENSE  Makefile  README.md  README.org  mfnet_cmd.py  net.py  pyproject.toml  setup.py  test_mfnet.py
cmdline/: mfnet_cmd.py  mfnet_cmd_postprocess.py  run_example.sh
cmdline/example_data/: data1_in.txt
cmdline/example_input_files/: data2.txt
cmdline_yaml/: example.yaml  example_bayes.yaml  example_equal_model_average.yaml  example_mo.yaml  example_mo_gen_single_fidelity.yaml  mfnet_cmd.py
cmdline_yaml/example_data_mo/: data2_out.txt
cmdline_yaml/example_result_files/: pyro.out_model1  pyro.out_model2  pyro.out_param_samples.csv
examples/cmdline/: Makefile  README.md  example_mo_gen.yaml  example_no_edges.yaml
examples/cmdline/input_files/: ex1.yaml  ex2.yaml  ex3.yaml  ex4.yaml  ex5.yaml  ex6.yaml  ex7.yaml  ex8.yaml
examples/cmdline/results/ex3/resultsM1/: data1_in.txt.evals  eval.txt.evals
examples/cmdline/results/ex3/resultsM2/: data2_in.txt.evals  eval.txt.evals
examples/cmdline/sample_data/multi_output/: data1_out.txt
examples/cmdline/sample_data/single_output/: data1_out.txt  data2_in.txt  data2_out.txt  eval.txt
examples/graph_learn/: README.md  datautils.py  fileops.py  main.py
examples/graph_learn/data4M/: data1_in.txt  data1_out.txt  data1_test_out.txt  data2_in.txt  data2_out.txt  data2_test_out.txt  data3_out.txt  data3_test_out.txt  data4_out.txt  data4_test.txt  data4_test_out.txt
examples/graph_learn/data4M_frac098/: data1_in.txt  data1_out.txt  data1_test_out.txt  data2_out.txt  data2_test_out.txt  data3_out.txt  data3_test_out.txt  data4_out.txt  data4_test.txt  data4_test_out.txt
examples/graph_learn/data4M_frac099/: data1_out.txt  data1_test_out.txt  data2_in.txt  data2_out.txt  data2_test.txt  data2_test_out.txt  data3_out.txt  data3_test_out.txt  data4_out.txt  data4_test_out.txt
examples/graph_learn/templates/: template.yaml  template_nn.yaml
html/: net.html
mfnets_surrogates/: __init__.py  mfnet_cmd.py  net.py  net_pyro.py  net_torch.py  pce_model.py  run_example.sh  test_mfnet.py  test_mfnet_torch.py
mfnets_surrogates/test_data/: data1.txt  eval.txt  eval.txt_output
mfnets_surrogates/test_results/: pyro.out_model1  pyro.out_model2  pyro.out_param_samples.csv  torch.out
mfnets_surrogates/tests/: test_mfnet.py  test_mfnet_pyro.py  test_mfnet_torch.py  test_utils.py
tests/: test_mfnet.py  test_mfnet_pyro.py  test_mfnet_torch.py
